:sparkles: feat: Comando Inicialização

--- a/base-aspnet-electron/appsettings.json
+++ b/base-aspnet-electron/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ClientApp": {
+    "Url": "http://localhost:3000"
+  },
   "AllowedHosts": "*"
 }
