:recycle: refactor: Transforma em um serviço a criação do electron

--- a/base-aspnet-electron/electron.manifest.json
+++ b/base-aspnet-electron/electron.manifest.json
@@ -6,7 +6,7 @@
   "name": "base-aspnet-electron",
   "author": "",
   "singleInstance": false,
-  "environment": "Production",
+  "environment": "Development",
   "build": {
     "appId": "com.base-aspnet-electron.app",
     "productName": "base-aspnet-electron",
